--- a/index.css
+++ b/index.css
@@ -19,7 +19,7 @@ body{
 }
 
 #hand{
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
+    width: fit-content;
+    height: fit-content;
+    /*object-fit: contain;*/
 }
